--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
 spring:
   datasource:
     url: ${DB_URL}
-    username: ${DB_USER}
+    username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
   sql:
@@ -27,3 +27,6 @@ spring:
 
 jwt:
   secret-key: ${JWT_SECRET_KEY}
+
+server:
+  port: ${SERVER_PORT}
